# Legacy-Tools

./: CMakeLists.txt  LICENSE  README.md
DLC/: DLCAudioFile.cpp  DLCManager.cpp  DLCPack.cpp  DLCTexturePack.cpp  UIScene_DLCMainMenu.cpp  UIScene_DLCOffersMenu.cpp  XUI_DLCOffers.cpp
Extras/: AbstractTexturePack.cpp  ChunkRebuildData.cpp  Consoles_App.cpp  Font.cpp  Minecraft.Client.vcxproj  Minecraft.cpp  PS3_App.cpp  Recipes.cpp  Xbox_App.cpp  cpp_regex_traits.hpp
GameRules/: GameRuleManager.cpp
GameRules/GameRules/: AddEnchantmentRuleDefinition.cpp  CollectItemRuleDefinition.cpp  ConsoleGenerateStructure.cpp  ConsoleSchematicFile.cpp  GameRuleDefinition.cpp  LevelGenerationOptions.cpp  XboxStructureActionGenerateBox.cpp  XboxStructureActionPlaceBlock.cpp  XboxStructureActionPlaceContainer.cpp  XboxStructureActionPlaceSpawner.cpp
Ps3 Dependencies/: REVIEW.md
Ps3 Dependencies/4JLibs/: STO_TitleSmallStorage.cpp
Ps3 Dependencies/Leaderboards/: LeaderboardManager.cpp
Ps3 Dependencies/Network/: GameNetworkManager.cpp  GameNetworkManager.h  PlatformNetworkManagerInterface.h  PlatformNetworkManagerStub.cpp  PlatformNetworkManagerStub.h  SQRNetworkManager_PS3.cpp  SessionInfo.h  SonyCommerce_PS3.cpp  SonyHttp_PS3.cpp  SonyRemoteStorage_PS3.cpp  SonyVoiceChat.cpp
Ps3 Dependencies/XUI/: XUI_ConnectingProgress.cpp  XUI_Ctrl_4JList.cpp  XUI_Ctrl_EnchantmentBook.cpp  XUI_Ctrl_MinecraftPlayer.cpp  XUI_Ctrl_MinecraftSkinPreview.cpp  XUI_Ctrl_MinecraftSlot.cpp  XUI_Ctrl_SliderWrapper.cpp  XUI_Ctrl_SlotItemCtrlBase.cpp  XUI_Ctrl_SplashPulser.cpp  XUI_DebugOverlay.cpp  (+32 more)
(+43 files in other folders)
